--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Lato", sans-serif;
-  background-color: #F9DB6D;
+  background-color: #f9db6d;
 }
 
 /* Style page content */
@@ -18,16 +18,27 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  box-shadow: 2px 2px 20px #464D77;
+  box-shadow: 2px 2px 20px #464d77;
   overflow-x: hidden;
-  
+}
+
+.navlink {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .navblock {
-  margin:auto;
+  margin: auto;
   width: 100%;
   height: 90%;
   display: flex;
+  flex-direction: column;
+}
+
+.link-item {
+  flex-grow: 4;
 }
 
 .navblock_text {
@@ -47,7 +58,7 @@ body {
 }
 
 .navblock_text a:hover {
-  color: #CFD8DC;
+  color: #cfd8dc;
 }
 
 .footer {
@@ -60,38 +71,38 @@ body {
 }
 
 .about_accent {
-  color:  green;
+  color: green;
 }
 
 .resume_accent {
-  color:  #36827F;
+  color: #36827f;
 }
 
 .research_accent {
-  color:  #E74C3C;
+  color: #e74c3c;
 }
 
 .blog_accent {
-  color:  #8E44AD;
+  color: #8e44ad;
 }
 
 a {
-  color: #3498DB;
+  color: #3498db;
   text-decoration: none;
 }
 
-.about_photo{
+.about_photo {
   display: block;
   margin-top: 5%;
   width: 300px;
-  height:300px;
-  object-fit:cover;
-  border-radius:50%;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 50%;
   margin-left: auto;
   margin-right: auto;
 }
 
-.about_logo{
+.about_logo {
   display: block;
   width: 40%;
   margin-left: auto;
@@ -108,12 +119,12 @@ a {
 }
 
 .portfolio_accent {
-  color:  #631C03;
+  color: #631c03;
 }
 
 .portfolio_image {
   max-width: 300px;
-  max-height:300px;
+  max-height: 300px;
   position: absolute;
   top: 55%;
   left: 50%;
@@ -144,7 +155,7 @@ a {
   width: 90%;
   position: absolute;
   text-align: center;
-  color: #8E44AD;
+  color: #8e44ad;
 }
 
 .blog-container {
@@ -155,7 +166,7 @@ a {
 
 .blog-container > div {
   background-color: white;
-  box-shadow: 2px 2px 20px #EAECEE;
+  box-shadow: 2px 2px 20px #eaecee;
   width: 45%;
   margin: 5% 0% 5% 0%;
   min-height: 25vh;
@@ -179,7 +190,7 @@ a {
   width: 95%;
   padding-right: 5%;
   font-size: 20px;
-  color: #CFD8DC;
+  color: #cfd8dc;
   text-align: end;
   margin-block-start: 0em;
   margin-block-end: 0em;
@@ -190,7 +201,7 @@ a {
     width: 100%;
     height: auto;
     position: relative;
-    box-shadow: 0px 10px 40px #F0F3F4;
+    box-shadow: 0px 10px 40px #f0f3f4;
   }
   .sidenav a {
     text-align: center;
@@ -222,10 +233,8 @@ a {
   .portfolio-container > div {
     width: 100%;
   }
-
 }
 .resume-experience-links {
   text-decoration: none !important;
   color: #000;
 }
-
