--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -238,3 +238,10 @@ a {
   text-decoration: none !important;
   color: #000;
 }
+
+.certification-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
